# OPEs-ID

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
OPEs_ID/: __init__.py  io.py  ms2_tools.py  mtype.py  tools.py  utils.py
OPEs_ID/gui/: __init__.py  config.py  const_name.py
OPEs_ID/gui/app_mainwindow/: AppMainWindow.py  ConfigPage.py  ConfigPage.ui  ConfigPage_ui.py  ResultPage.py  ResultPage.ui  ResultPage_ui.py  __init__.py
OPEs_ID/gui/calc/: metfrag.py  progress_adaptor.py  worker.py
OPEs_ID/gui/dataframe_table/: __init__.py  delegate.py  model.py  view.py
OPEs_ID/gui/dialogs/: MetfragConfigDialog.py  MetfragConfigDialog.ui  MetfragConfigDialog_ui.py  MetfragResultDialog.py  ProgressDialog.py
OPEs_ID/isotope_predict/: __init__.py  predict.py  utils.py
OPEs_ID/metfrag/: __init__.py  config.py  dl.py  output.py  param.py  run.py
example/: analysis.ipynb  db.csv
